MonthlyCalendar: 前後の月の日付を薄く #32

--- a/src/components/MonthlyCalendar/DayCell/index.module.scss
+++ b/src/components/MonthlyCalendar/DayCell/index.module.scss
@@ -5,3 +5,15 @@
   vertical-align: top;
   border: variables.$border-width solid variables.$border-color;
 }
+
+.day-cell-text {
+  color: black;
+}
+
+.day-cell-text-gray {
+  color: lightgray;
+}
+
+.day-cell-text-today {
+  background-color: skyblue;
+}
