--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,2 +1,7 @@
+$primary-color: skyblue;
+$secondary-color: lightgreen;
+$black-color: black;
+$gray-color: lightgray;
+$white-color: white;
 $border-color: lightgray;
 $border-width: 2px;
