DayCellのアスペクト比調整 #20

--- a/src/components/MonthlyCalendar/DayCell/index.module.scss
+++ b/src/components/MonthlyCalendar/DayCell/index.module.scss
@@ -1,6 +1,9 @@
 @use "variables";
 
 .day-cell {
+  // カレンダーは5x7なので1/5=20%
+  // FIXME: 上位コンポーネントについての知識を持ってしまっている
+  height: 20%;
   text-align: center;
   vertical-align: top;
   border: variables.$border-width solid variables.$border-color;
